manifests/apps/2048/base/istio-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: game-2048-vs
  namespace: game-2048
spec:
  hosts:
  - "kubernetes.patrick-cloud.com"
  gateways:
  - istio-system/patrick-cloud-gateway
  http:
  - name: game-2048
    match:
    - uri:
        prefix: "/game-2048/"
    rewrite:
       uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: service-2048.game-2048.svc.cluster.local
